manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  name: townhall
spec:
  selector:
    matchLabels:
      app: townhall
  replicas: 1
  template:
    metadata:
      labels:
        app: townhall
    spec:
      containers:
      - image: ghcr.io/schuhu/townhall:1.0.21
        name: townhall
        ports:
        - containerPort: 8080
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: townhall
spec:
  selector:
    app: townhall
  ports:
    - protocol: TCP
      port: 8080
      name: http-townhall

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: townhall
spec:
  gateways:
  - istio-system/osdp-wildcard-gw
  hosts:
  - th.dev.osdp.open.ch
  http:
  - route:
    - destination:
        host: townhall
        port:
          number: 8080

---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: townhall
spec:
  action: ALLOW
  rules:
  - when:
    - key: request.auth.claims[groups]
      values:
      - 1735c8a0-f558-4847-a22a-ec7493233928
  selector:
    matchLabels:
      app: panta-doc

---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: townhall
spec:
  jwtRules:
  - forwardOriginalToken: false
    issuer: https://auth.dev.osdp.open.ch/dex/
    outputPayloadToHeader: "x-jwt-payload"
  - forwardOriginalToken: false
    issuer: https://sts.windows.net/fef8ae03-8a66-4fb8-b7f7-e69c065cdc91/
    outputPayloadToHeader: "x-jwt-payload"
  selector:
    matchLabels:
      app: townhall
